Add program description and update schedules for all age groups

--- a/program.html
+++ b/program.html
@@ -36,6 +36,11 @@
     <!-- Program selection section -->
     <div class="program-content" id="program-selection">
         <h3>Select Programs</h3>
+        <div class="program-description">
+            <p>Our coaches are full-time professionals that utilize best practices from the top youth academies around the world. We offer 12 months of programming across multiple sports with the primary focus on soccer.</p>
+            
+            <p>Training and development within our Raptors Academy is guaranteed but placement on official Raptors teams is not. Playing on official Raptors teams is dependent on development, attendance, and performances in games. Regardless, we will have teams and games for all Apex Athletic Club players.</p>
+        </div>
         <!-- Indoor Soccer -->
         <div class="sport-option">
             <div class="sport-header">
@@ -45,8 +50,8 @@
             <div class="sport-details">
                 <div class="text-content">
                     <div class="timeline"><strong>October - February and May - August</strong></div>
-                    <div class="age-group"><strong>2010s and younger</strong></div>
-                    <div class="schedule"><strong>Mon/Tue/Sat/Sun Evenings</strong></div>
+                    <div class="age-group"><strong>2014s and younger</strong></div>
+                    <div class="schedule"><strong>Tuesday and Saturday Evenings</strong></div>
                     <ul>
                         <li>Professional, licensed coaches</li>
                         <li>Focus on technical skills and fast-paced decision making</li>
@@ -71,8 +76,8 @@
             <div class="sport-details">
                 <div class="text-content">
                     <div class="timeline"><strong>March - May and August - October</strong></div>
-                    <div class="age-group"><strong>2010s and younger</strong></div>
-                    <div class="schedule"><strong>Mon/Tue/Sat/Sun Evenings</strong></div>
+                    <div class="age-group"><strong>2014s and younger</strong></div>
+                    <div class="schedule"><strong>Tuesday and Saturday Evenings</strong></div>
                     <ul>
                         <li>Professional, licensed coaches</li>
                         <li>Emphasis on tactical understanding and game intelligence</li>
@@ -153,8 +158,8 @@
             <div class="sport-details">
                 <div class="text-content">
                     <div class="timeline"><strong>March - May and August - October</strong></div>
-                    <div class="age-group"><strong>2010s and younger</strong></div>
-                    <div class="schedule"><strong>Wed/Sat 4-6PM</strong></div>
+                    <div class="age-group"><strong>2014s and younger</strong></div>
+                    <div class="schedule"><strong>Friday and Sunday Evenings</strong></div>
                     <div class="coaches"><strong>Professional, licensed coaches</strong></div>
                     <ul>
                         <li>Non-contact skill development</li>
